--- a/style1.css
+++ b/style1.css
@@ -1,84 +1,80 @@
-#block {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.block {
     width: 365px;
-    height: 400px;
+    height: 380px;
     background-color: aqua;
     border: 1px solid #000;
     margin: 0 auto;
     font-size: 30px;
     text-align: center;
 }
-#blockShirt,#blockShoes,#blockJeans{
-    width: 365px;
-    height: 400px;
-    background-color: aqua;
-    border: 1px solid #000;
-    margin: 0 auto;
-    font-size: 30px;
-    text-align: center; 
+
+.headerBasket {
+    font-size: 40px;
+    text-align: center;
 }
 
+.costBasket {
+    font-size: 30px;
+    text-align: center;
+}
+
+.basket {
+    width: 900px;
+    height: 450px;
+    background-color: blue;
+    border: 1px solid #000;
+    margin: 0 auto;
+    margin-top: 30px;
+    font-size: 30px;
+    text-align: center;
+}
+
+.img {
+    display: block;
+    width: 100%;
+    height: 250px;
+}
+
+.containerProductInBasket {
+    display: flex;
+    white-space: pre-wrap;
+}
 
 .product {
     display: flex;
     flex-wrap: wrap;
+    white-space: pre-wrap;
 }
 
-
-#header {
-    font-size: 30px;
-    text-align: center;
-}
-
-#blockBasket {
-    font-size: 20px;
-    text-align: center;
-   display: flex;
-    flex-wrap: wrap;
-}
-
-
-#imgShirt,#imgShoes,#imgJeans{
-    width: 100%;
-    height: 250px;
-}
-#button{
-    display: block;
-    margin: 0 auto;
-    width: 150px;
-    height: 45px;
-}
-#buttonInShirt,#buttonInShoes,#buttonInJeans,#buttonOutShirt,#buttonOutShoes,#buttonOutJeans {
+.buttonIn {
     width: 200px;
     height: 45px;
     margin: 0 auto;
     display: block;
 }
 
-.basket {
-    width: 900px;
-    height: 600px;
-    background-color: blue;
-    border: 1px solid #000;
-    margin: 0 auto;
-    margin-top: 30px;
-    
-}
-
-#ShirtInBasket,#ShoesInBasket,#JeansInBasket{
-    
-    width: 298px;
-    height: 240px;
+.clothesInBasket {
+    font-size: 25px;
+    width: 300px;
+    height: 300px;
     background-color: green;
     border: 1px solid #000;
 }
-#basketImg{
+
+.basketImg {
     margin: 0 auto;
-    width: 50%;
-    height: 100px;
+    width: 80%;
+    height: 40%;
 }
 
-
-#noBasket{
-    font-size: 30px;
-    text-align: center;
+.buttonBasket {
+    width: 200px;
+    height: 25px;
+    margin: 0 auto;
+    display: block;
 }
